# Clip_Tool

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  prometheus.yml  turbo.json
.github/workflows/: ci.yml
apps/analysis-service/: Dockerfile  pyproject.toml  requirements.txt
apps/analysis-service/src/: config.py  main.py  schemas.py  worker.py
apps/analysis-service/src/services/: analyzer.py  audio.py  job_store.py  llm.py
apps/clipgen-service/: Dockerfile  pyproject.toml  requirements.txt
apps/clipgen-service/src/: config.py  main.py  worker.py
apps/clipgen-service/src/services/: face_detection.py  job_store.py  subtitles.py  video_processor.py
apps/core-service/: alembic.ini  package.json  pyproject.toml  requirements.txt
apps/core-service/alembic/: env.py
apps/core-service/src/: main.py  models.py
apps/export-service/: Dockerfile  pyproject.toml  requirements.txt
apps/export-service/src/: config.py  main.py  scheduler.py
apps/export-service/src/services/: db.py  job_store.py  storage.py
apps/ingest-service/: Dockerfile  pyproject.toml  requirements.txt
apps/ingest-service/src/: config.py  main.py  schemas.py
apps/ingest-service/src/services/: downloader.py  job_store.py  storage.py
apps/transcription-service/: Dockerfile  pyproject.toml  requirements.txt
apps/transcription-service/src/: config.py  main.py  worker.py
apps/transcription-service/src/services/: job_store.py  storage.py  transcriber.py
apps/web/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/processing/[jobId]/: page.tsx
apps/web/src/app/results/[jobId]/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/components/: Sidebar.tsx
docs/: frontend_plan.md
tests/: e2e.py
