[tool.poetry]
name = "clipgen-service"
version = "0.1.0"
description = "Clip Generation Service with FFmpeg and MediaPipe"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
minio = "^7.2.4"
redis = "^5.0.1"
httpx = "^0.27.0"
mediapipe = "^0.10.9"
opencv-python-headless = "^4.9.0.80"
numpy = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
flake8 = "^7.0.0"
black = "^24.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
