[tool.poetry]
name = "transcription-service"
version = "0.1.0"
description = "Whisper-based Transcription Service"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
faster-whisper = "^1.0.0"
minio = "^7.2.4"
redis = "^5.0.1"
httpx = "^0.27.0"
torch = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
flake8 = "^7.0.0"
black = "^24.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
